[package]
name = "json-tools"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2021"

[dependencies]
serde = "1.0"
toml = "0.5"
json5 = "0.4"

[dependencies.serde_json]
version= "1.0"
features = ["preserve_order"]

[[bin]]
name = "shrink-json"

[[bin]]
name = "flatten-json"

[[bin]]
name = "json2js"

[[bin]]
name = "json52json"

[[bin]]
name = "toml2json"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"