[package]
name = "json-tools"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
serde = "1.0"
json5 = "0.4"
serde_yaml = "0.8"
nom = "8.0.0"

[dependencies.toml]
version = "0.9"
features = ["preserve_order"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[[bin]]
name = "shrink-json"

[[bin]]
name = "flatten-json"

[[bin]]
name = "unflatten-json"

[[bin]]
name = "json2js"

[[bin]]
name = "json52json"

[[bin]]
name = "yaml2json"

[[bin]]
name = "toml2json"

[[bin]]
name = "json2toml"

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
pretty_assertions = "1.1.0"
